nearly more done

--- a/Bachelorarbeit/parameteruntersuchung.tex
+++ b/Bachelorarbeit/parameteruntersuchung.tex
@@ -18,7 +18,7 @@ in Bezug auf bereits gewählte Massen und auf den Quadrocopter zusammen. Der Fak
 	f_P = \frac{m_{Flugzeug}}{m_{Quad}} \eqend{.}
 	\label{eq:penalty}
 \end{equation} 
-Für erste Untersuchungen wird der Penaltyfaktor auf 1 gesetzt. Dies entspricht einer sehr optimistischen Einschätzung. Im Anschluss werden die Parameter in näherer Umgebung der ersten festgesetzten Werte variiert. Dadurch kann der Einfluss auf das Leistungsverhalten und die Richtung der Optimierung bestimmt werden. Diese erste, einfache Untersuchung ist nur eine sehr oberflächliche, weil jeder Parameter nur einzeln untersucht wird. Jegliche Kombinationen von Einflüssen wie der Einfluss des Masse auf die Steiggeschwindigkeit oder vergleichbare Beziehungen werden vernachlässigt. Im Hinblick auf diese erste, kleine Optimierung ist der Kostenfaktor die maximal erreichbare Höhe beider Fluggeräte. Je nachdem welches der beiden Fluggeräte effektiver und effizienter eine maximale Flughöhe erreicht, wird es weiter untersucht und anschließend optimiert. 
+Für erste Untersuchungen wird der Penaltyfaktor auf 1 gesetzt. Dies entspricht einer sehr optimistischen Einschätzung. Im Anschluss werden die Parameter in näherer Umgebung der ersten festgesetzten Werte variiert. Dadurch kann der Einfluss auf das Leistungsverhalten und die Richtung der Optimierung bestimmt werden. Diese erste, einfache Untersuchung ist nur eine sehr oberflächliche, weil jeder Parameter nur einzeln untersucht wird. Jegliche Kombinationen von Einflüssen wie der Einfluss des Masse auf die Steiggeschwindigkeit oder vergleichbare Beziehungen werden vernachlässigt. Im Hinblick auf diese erste, kleine Optimierung ist der Kostenfaktor die maximal erreichbare Höhe beider Fluggeräte. Je nachdem welches der beiden Fluggeräte effektiver und effizienter eine maximale Flughöhe erreicht, wird es weiter untersucht und anschließend optimiert. Die 
 
 
 \subsection{Erste Untersuchung}
@@ -43,6 +43,9 @@ In der Tab. \ref sind wichtige Parameter der Ausgangskonstellation für das Flä
 	\end{tabular}	
 	\label{tab:referenzkonfiguration}
 \end{center}
+Diese Konfiguration ist die Grundlage aller Untersuchungen, die das Flächenflugzeug betreffen.
+
+
 
 \begin{figure}[H]
 %\centering
@@ -58,23 +61,18 @@ Dies gilt auch für den Motorwirkungsgrad. Dieser steigt mit einer anwachsenden 
 
 
 
-% Die maximale Motorspannung entspricht ab \SI{11400}{m} Flughöhe der maximalen Batteriespannung, die durch die Last von anfänglich \SI{15,6}{V} auf ca. \SI{14.7}{V} einbricht. Der Verlauf des Batteriestroms steht in direktem Zusammenhang mit dem Motorstrom und der Motorspannung. Dies wird aus Gleichung \ref{eq:batteriestrom} ersichtlich. Bei einem beinahe konstantem Motorstrom ist \ensuremath{I_{Bat}} fast ausschließlich von \ensuremath{U_{Mot}} abhängig. Daher der gleiche Verlauf wie bei \ensuremath{U_{Mot}}. Danach ist \ensuremath{U_{Mot}} konstant und \ensuremath{I_{Bat}} hängt nur noch von \ensuremath{I_{Mot}} ab. 
-%Der Verlauf der Drehzahl ist ausschlaggebend für den des Motorspannung. Da die Motorspannung nicht weiter steigen kann und der Motorstrom leicht absinkt, kann die Drehzahl analog zum sinkenden Strom durch die festgelegten Grenzen leicht steigen (Vgl. Gleichung \ref{eq:motorspannung}). Die Maximaldrehzahl ist damit auf \SI{12000}{RPM} begrenzt. 
-
-%Zu Beginn des Steigfluges wären größere Steigwinkel effizienter, allerdings werden diese durch den maximalen Motorstrom begrenzt. Ohne diese würde der Bahnneigungswinkel beinahe linear absinken. Daraus kann geschlossen werden, dass ein Flug mit maximalem Motorstrom im unteren Höhenbereich am effizientesten ist. Der sägezahnartige Verlauf der Motorspannung hängt mit der gewählten Diskretisierung / Genauigkeit zusammen. Eine genauere Untersuchung dieser Punkte würde zu einem glatten Verlauf des Motorstroms bei \ensuremath{I_{max}} führen. Ebenso würde sich der Verlauf aller anderen Kurven glätten. Gleichzeitig zum konstanten Motorstrom wächst die Motorspannung linear an, bis sie ab \SI{11400}{m} das Niveau der Batteriespannung erreicht. Damit ist die PWM bei \SI{100}{\%}. Ab diesem Zeitpunkt kann nicht mehr mit maximalem Motorstrom geflogen werden, \textcolor{red}{wodurch folglich der Motorspannung und der Bahnneigungswinkel simultan abfallen}. 
-%Der Zusammenhang ergibt sich daher, dass mit dem Bahnanstellwinkel der Schub und die Geschwindigkeit steigen (Vgl. Gleichung \ref{eq:schub_flaechenflugzeug} und \ref{eq:schub_flaechenflugzeug}). Die im Anschluss aus dem Kennfeld interpolierte Drehzahl fließt direkt in den Motorstrom ein (Vgl. Gleichung \ref{eq:motorstrom}). Bedingt durch die mit dem Winkel und der Höhe (indirekt durch die Dichte) steigende Geschwindigkeit, können die Steigwinkel leistungsbedingt nicht mehr aufgebracht werden. Die maximale Motorspannung entspricht hier der maximalen Batteriespannung, die durch die Last von anfänglich \SI{15,6}{V} auf ca. \SI{14.7}{V} einbricht. Der Verlauf des Batteriestroms steht in direktem Zusammenhang mit dem Motorstrom und der Motorspannung. Dies wird aus Gleichung \ref{eq:batteriestrom} ersichtlich. Bei konstanten Motorstrom ist die \ensuremath{I_{Bat}} nur von \ensuremath{U_{Mot}} abhängig. Daher der gleiche Verlauf wie bei \ensuremath{U_{Mot}}. Danach ist \ensuremath{U_{Mot}} konstant und \ensuremath{I_{Bat}} hängt nur noch von \ensuremath{I_{Mot}} ab.
-
-%Gleichzeitig steigt der Motorstrom leicht, da für einen konstanten Bahnneigungswinkel der benötigte Schub konstant bleibt (Vgl. Gleichung \ref{eq:schub_flaechenflugzeug}), aber mit abnehmenden Dichte das Drehmoment zunimmt. Noch stärker als der Motorstrom steigt die Motorspannung linear an, bis sie das Niveau des Batteriestroms erreicht. Damit ist das Verhältnis von \ensuremath{U_{Mot}} und \ensuremath{U_{Bat}} gleich 1 und  die PWM liegt bei \SI{100}{\%}. Ab diesem Zeitpunkt kann \textcolor{red}{leistungsbedingt} die Geschwindigkeit und Schub für einen konstanten Steigwinkel nicht mehr gehalten werden. Folglich sinkt der Bahnneigungswinkel, da für ein Höhenintervall die absolute Fluggeschwindigkeit und analog die Steiggeschwindigkeit \ensuremath{V_H} mit einem mit einem  größeren Bahnneigungswinkel sinkt (Vgl. Gleichung \ref{eq:geschw_flaechenflugzeug}).
-
-
 \subsection{Einflussfaktoren auf das Flächenflugzeug}
 Die zu variierenden Parameter des Flächenflugzeugs sind diejenigen Leistungsparameter, die das Fluggerät qualifizieren. Das sind die Motor-Propeller-Kombination, die Propelleranzahl, die Gleitzahl, die Auslegungsgeschwindigkeit und der Penalty-Faktor.
 
 \subsubsection{Motor-Propeller Kombination}
 \label{subsubsec:mot_prop_kombi}
-Die Motor-Propeller-Kombination beeinflusst entscheidend das Leistungsverhalten von elektrisch, propellergetriebenen Fluggeräten. Mit dem in Tab. \ref{tab:flzg_parameter} aufgeführten Motor mit einem Gewicht von \SI{106}{g} und einem \ensuremath{K_V}-Wert von \SI{1390}{RPM/V} sind bereits sehr hohe Flughöhen erreichbar. Bei Verwendung des gleichen Propellers, einem 9x7 Propeller, und der Variation des Motors mit einem anderen \ensuremath{K_V}-Wert, zeigen die Motoren mit einem größeren \ensuremath{K_V}-Wert ein besseres Flugverhalten (Vgl. Abb. \ref{abb:flaechenflzg_mot_prop}).\\
-Die optimale Flugweise des Flächenflugzeuges ist für jede Art des Motors mit gleichem Gewicht identisch. Zuerst wird solange mit maximalem Motorstrom geflogen, bis die Schubhebelstellung \SI{100}{\%} erreicht. Danach sinkt der Bahnneigungswinkel während die Steiggeschwindigkeit steigt. Die maximale Höhe ist erreicht, wenn der noch fliegbare Steigwinkel Null erreicht und kein Steigflug mehr möglich ist. Der Steigwinkel liegt dabei in einem Bereich von \SI{15}{^\circ} und \SI{20}{^\circ}. \\
-Mit dem \ensuremath{K_V}-Wert steigt ebenso die maximale Höhe (Vgl. Abb. \ref{abb:flaechenflzg_mot_prop}). Den größten Einfluss auf die Flugleistung hat der \ensuremath{K_V}-Wert auf die Motorspannung. Hier gilt, dass bei einer annähernd gleichen Drehzahl die Motorspannung mit dem \ensuremath{K_V}-Wert sinkt. Der Grund dafür liegt in der Definition dieses Motorkennwertes.\\
+\todo[inline]{Erweitern und noch genau auf die }
+Die Motor-Propeller-Kombination beeinflusst entscheidend das Leistungsverhalten von elektrisch, propellergetriebenen Fluggeräten. Mit dem in Tab. \ref{tab:referenzkonfiguration} aufgeführten Motor mit einem Gewicht von \SI{106}{g} und einem \ensuremath{K_V}-Wert von \SI{1390}{RPM/V} sind bereits sehr hohe Flughöhen erreichbar. Bei Verwendung des gleichen Propellers, einem 9x7 Propeller, und der Variation des Motors mit einem anderen \ensuremath{K_V}-Wert, zeigen die Motoren mit einem größeren \ensuremath{K_V}-Wert ein höhere Dienstgipfelhöhe (Vgl. Abb. \ref{abb:flaechenflzg_mot_prop}). Alle Motoren bis auf den mit einem \ensuremath{K_V}-Wert von \SI{2850}{RPM/V}	erreichen die Dienstgipfelhöhe.\\
+Bei Betrachtung der Restladung kann die Effizienz der Motoren am besten beurteilt werden. Hier verzeichnet der Motor mit einem \ensuremath{K_V}-Wert von \SI{2850}{RPM/V} die schlechtesten Flugleistungen, da die Restladung am stärksten abnimmt und schon bei \SI{10000}{m} \SI{0}{\%} erreicht. Bei den Motoren mit einem \ensuremath{K_V} von \SI{1390}{RPM/V} und \SI{1640}{RPM/V} sind die unterschiede marginal. Die Dienstgipfelhöhe ist in etwa dieselbe bei ca. \SI{16500}{m} Höhe. Der \SI{1390}{} \ensuremath{K_V} Motor weist bei genauerer Betrachtung jedoch leicht verbesserte Effizienz auf, da die Restladung immer höher ist. \\
+Deutlich geringere Dienstgipfelhöhen als die beiden zuvor erwähnten Motoren haben die Motoren mit einem \ensuremath{K_V}-Wert von \SI{840}{RPM/V} und \SI{1035}{RPM/}, aber die Effizienz in jedem Höhenlevel ist ist gegenüber allen anderen Motoren höher. Der Verlauf der beiden Restladungskurven ist bis \SI{10000}{m} identisch bevor der Motor mit dem geringeren \ensuremath{K_V} bei \SI{12000}{m} und der mit der mit dem höheren bei \SI{15000}{m} seine Dienstgipfelhöhe erreicht. 
+An dieser Stelle sei nochmal auf den Begriff der Dienstgipfelhöhe hingewiesen. Diese zeichnet sich durch eine Limitierung des TOC durch die fehlende Motorleistung zum Aufstieg in noch größere Flughöhen aus. Kennzeichnend für diesen Flugzustand ist das vollständige Aufbrauchen des Leistungsüberschuss, der bei \SI{100}{\%} PWM erreicht ist. Trotzdem gilt für alle der Flug mit maximalen Motorstrom bei einem noch vorhandenen Leistungsüberschuss am effizientesten.
+Die Motoren mit einem \ensuremath{K_V} von \SI{1390}{RPM/V} und \SI{1640}{K_V} weisen das gleiche Flugverhalten auf, das in Abschn. \ref{subsec:erste_untersuchung} beschrieben wird.
+Mit dem \ensuremath{K_V}-Wert steigt ebenso die Dienstgipfelhöhe (Vgl. Abb. \ref{abb:flaechenflzg_mot_prop}). Den größten Einfluss auf die Flugleistung hat der \ensuremath{K_V}-Wert auf die Motorspannung. Hier gilt, dass bei einer annähernd gleichen Drehzahl die Motorspannung mit dem \ensuremath{K_V}-Wert sinkt. Der Grund dafür liegt in der Definition dieses Motorkennwertes.\\
 
 \begin{figure}[H]
 \centering
@@ -83,12 +81,14 @@ Mit dem \ensuremath{K_V}-Wert steigt ebenso die maximale Höhe (Vgl. Abb. \ref{a
 	\label{abb:flaechenflzg_mot_prop}
 \end{figure}
 
-Der \ensuremath{K_V}-Wert ist ein Kennwert für die Anzahl der Umdrehungen pro Minute pro Volt im Leerlauf. Ein hoher \ensuremath{K_V}-Wert bedeutet nun im Umkehrschluss, dass bei einer hohen Drehzahl die Spannung geringer ist als für einen Motor mit einem vergleichsweise niedrigem \ensuremath{K_V}-Wert. Gleichzeitig sinkt allerdings das Verhältnis von Drehmoment pro Ampere, das der \ensuremath{K_M}-Wert ausdrückt  \cite[S.35 und S.42-43]{Buchi.2013}. Es gilt die Beziehung
+Der \ensuremath{K_V}-Wert ist ein Kennwert für die Anzahl der Umdrehungen pro Minute pro Volt im Leerlauf. Ein hoher \ensuremath{K_V}-Wert bedeutet nun im Umkehrschluss, dass bei einer hohen Drehzahl die Spannung geringer ist als für einen Motor mit einem vergleichsweise niedrigem \ensuremath{K_V}-Wert. Die Drehzahl ist in diesem Fall für fast alle Motoren identisch bzw. die Unterschiede minimal. Gleichzeitig sinkt allerdings das Verhältnis von Drehmoment pro Ampere, das der \ensuremath{K_M}-Wert ausdrückt  \cite[S.35 und S.42-43]{Buchi.2013}. Es gilt die Beziehung
 \begin{equation}
-	K_M = 1/K_V\cdot 30/\pi.
+	K_M = 1/K_V\cdot 30/\pi \eqend{.}
 \end{equation}
-Ein Motor mit hohem \ensuremath{K_V}-Wert muss daher einen hohen Dauermotorstrom besitzen, um gute Flugleistungen zu erzielen (Vgl. Abb. \ref{abb:flaechenflzg_mot_prop}). Durch diese Abhängigkeit wird auch die PWM beeinflusst. Der Motor mit einem \ensuremath{K_V} von \SI{840}{RPM/V} erreicht durch seine hohe Motorspannung deutlich schneller das Niveau der Batteriespannung. Somit wird auch frühzeitiger das Absinken des Bahnneigungswinkels eingeleitet, weil die maximale Motorleistung erreicht ist. Für Motoren mit einem niedrigeren \ensuremath{K_V}-Wert bedeutet dies auch gleichzeitig das Ende des Steigfluges. Wieder anders ist dieser Zusammenhang für Motoren mit einem hohen \ensuremath{K_V}-Wert. Hier wird \SI{100}{\%} PWM erst bei deutlich größeren Höhen erreicht, weshalb folglich der optimale Bahnneigungswinkel erst später nicht mehr gehalten werden kann und danach sinkt. Den Steigflug begrenzt in diesem Fall die Restladung. Dabei nimmt die Restladung für kleinere \ensuremath{K_V}-Werte nicht so schnell ab wie dies für große der Fall ist. Die kann auf den höheren Gesamtwirkungsgrad und im Detail auf den höheren \textcolor{red}{Motorreglerwirkungsgrad zurückgeführt werden auch ein höherer Motorwirkungsgrad bei höherer Spannung}. Durch die deutlich höhere Pulsweitenmodulation ist der Wirkungsgrad des Motorreglers entsprechend höher (Vgl. Gleichung \ref{eq:eta_pwm}). Außerdem sind die Verluste durch Temperatur  sowie Innenwiderstand oder Leerlaufstrom für einen Motoren mit niedrigem \ensuremath{K_V}-Wert geringer.\\
+Ein Motor mit hohem \ensuremath{K_V}-Wert muss daher einen hohen Dauermotorstrom besitzen, um gute Flugleistungen zu erzielen (Vgl. Abb. \ref{abb:flaechenflzg_mot_prop}). Durch diese Abhängigkeit wird auch die PWM beeinflusst. Der Motor mit einem \ensuremath{K_V} von \SI{840}{RPM/V} erreicht durch seine hohe Motorspannung deutlich schneller das Niveau der Batteriespannung und hat somit seinen Leistungsüberschuss aufgebraucht. Somit wird auch frühzeitiger das Absinken des Bahnneigungswinkels eingeleitet, weil die maximale Motorleistung erreicht ist. Für Motoren mit einem niedrigeren \ensuremath{K_V}-Wert bedeutet dies auch gleichzeitig das Ende des Steigfluges. Wieder anders ist dieser Zusammenhang für Motoren mit einem hohen \ensuremath{K_V}-Wert. Hier wird \SI{100}{\%} PWM erst bei deutlich größeren Höhen erreicht oder gar nicht, weshalb folglich der optimale Bahnneigungswinkel erst später nicht mehr gehalten werden kann und danach sinkt. Bei \ensuremath{\gamma = \SI{0}{^\circ}} ist der Steigflug beendet. Hierbei steigt zudem der optimale Bahnneigungswinkel mit dem \ensuremath{K_V}-Wert. Da die Geschwindigkeit mit einem höheren Bahnneigungswinkel sinkt (Vgl. Gleichung \ref{eq:geschw_flaechenflugzeug}), sinkt auch die benötigte Leistung, die hauptsächlich für die Motoren mit geringem \ensuremath{K_V} begrenzend ist. Dabei nimmt die Restladung für kleinere \ensuremath{K_V}-Werte nicht so schnell ab wie dies für große der Fall ist. Die kann auf den höheren Gesamtwirkungsgrad und im Detail auf den höheren \textcolor{red}{Motorreglerwirkungsgrad zurückgeführt werden auch ein höherer Motorwirkungsgrad bei höherer Spannung}. Durch die deutlich höhere Pulsweitenmodulation ist der Wirkungsgrad des Motorreglers entsprechend höher (Vgl. Gleichung \ref{eq:eta_pwm}). Außerdem sind die Verluste durch Temperatur  sowie Innenwiderstand oder Leerlaufstrom für einen Motoren mit niedrigem \ensuremath{K_V}-Wert geringer. Der letzte starke Anstieg des Gesamtwirkungsgrades für \SI{840}{RPM/V} und \SI{1035}{RPM/V} liegt am Propellerwirkungsgrad. Durch den starken und schnellen Abfall des Bahnneigungswinkels steigt entsprechend die Fluggeschwindigkeit \ensuremath{V_A} signifikant an (Vgl. Gleichung \ref{eq:geschw_flaechenflugzeug}). Als Konsequenz auf den starken Anstieg der Fluggeschwindigkeit steigt auch der Propellerwirkungsgrad (Vgl. Gleichung \ref{eq:eta_prop}). \\
+Zusammengefasst besitzen Motor mit einem niedrigen \ensuremath{K_V}-Wert eine erhöhte Effizienz im Betrieb, die sich gegenüber mit einem höheren \ensuremath{K_V} vor allem in der Abnahme der Restladung widerspiegelt. Allerdings ist die Leistung unzureichend für den in dieser Arbeit geforderten Aufstieg. Dies macht sich vor allem im Leistungsüberschuss, repräsentiert durch die PWM, bemerkbar. Ein zu hoher \ensuremath{K_V}-Wert des Motors bedeutet auf der anderen Seite jedoch wieder zu hohe Verluste und somit erneut eine nicht optimale Konfiguration des Flächenflugzeugs. Folglich liegt das Optimum in der Mitte der beiden Grenzen. Es ist also ein Motor mit einem hohen \ensuremath{K_V}-Wert zu wählen, der aber auch geringe Verluste aufweist. Dies wird gut durch den hier verwendeten Motor mit 1390 \ensuremath{K_V} repräsentiert. \\
 An dieser Stelle ist auch die Motor-Propeller Kombination zu beachten. Der Motor mit einem \ensuremath{K_V}-Wert von 2850 erzielt mit dem 9x7 Propeller zwar etwas schlechtere Flugleistungen, erreicht mit einem 6x4 Propeller jedoch noch größere Höhen (siehe Anhang\textcolor{red}{Abbildung kommt noch}). Zusammengenommen zeigt sich, dass mit geringer werdenden \ensuremath{K_V}-Wert, also einem langsamer, aber mit höherem Drehmoment drehender Motor, der optimale Durchmesser des Propellers in reziproker Weise steigt bei einem gleichen Verhältnis zwischen Durchmesser und Steigung. %Nach \cite{Wall.2015} erhöht sich der Wirkungsgrad eines Rotors mit größer werdenden Durchmesser. 
+Hier sei auch nochmal auf den Sprung im Verlauf der Leistungsgrößen für die Motoren mit 1390 und 1640 \ensuremath{K_V} hingewiesen. Da dieser bei beiden an der gleichen Stelle auftritt und die Drehzahlverläufe komplett identisch sind, kann dieser auf eine Inkonsistenz im Propellerkennfeld zurückgeführt werden.
 Mit den oben gemachten Aussagen zu einer Motor-Propeller-Kombination wird im Folgenden der Propeller an die Wahl der Motoren angepasst.
 %\textcolor{red}{hier anbringen, dass Effizienz von einem Motor mit geringem kV höher ist, weniger Verluste und weniger Erhitzung, 
 %http://rcboats.kiwi/index.php/ct-menu-item-15/ct-menu-item-31/ct-menu-item-43}
@@ -97,20 +97,29 @@ Mit den oben gemachten Aussagen zu einer Motor-Propeller-Kombination wird im Fol
 
 \subsubsection{Anzahl der Motoren und Propeller}
 \label{subsubsec:anz_mot_flaechenflzg}
-Während die Leistung der Motoren mit gleichem Gewicht wenig Einfluss auf den optimalen Steigwinkel hat, ändert sich dies bedeutend mit der Anzahl der Motoren. Schon mit einer Steigerung der Motorenanzahl auf 2 verändert sich der optimale Steigwinkel zu \SI{90}{^\circ}. Die dazu zugehörige Steiggeschwindigkeit liegt hierbei beim Maximum der Iterationsweite von der Steiggeschwindigkeits. Dies ist solange der optimale Betriebspunkt bis der Steigwinkel von \SI{55}{^\circ} optimaler ist.
-Ebenfalls wie oben beschrieben ist dieser Zustand so lange fliegbar bis der Motorstrom auf dem Niveau des Batteriestroms und damit \SI{100}{\%} der PWM erreicht ist. Ab diesem Punkt steigt der Bahnneigungswinkel wieder an, da für einen Höhenschritt die Fluggeschwindigkeit mit Winkel sinkt. Alle anderen Größen verhalten sich analog zum oben beschriebenen Zustand (Vgl. Kap. \ref{subsec:erste_untersuchung}). Ein vergleichbares Flugverhalten ist bei einer Erhöhung der Anzahl auf 4 zu beobachten.
-Mit der Propelleranzahl verringert sich der Schub, der pro Propeller aufgebracht werden muss und damit auch die vom Motor benötigte Leistung. Folglich erhöht sich auch der Leistungsüberschuss. Dies resultiert auf der anderen Seite in einer höheren Belastung der Batterie. Beachtlich ist auch, dass die Batterie am TOC noch beinahe \SI{50}{\%} Restladung besitzt. Dies ist signifikant mehr als beim Quadrocopter. Bei diesem ist der Steigflug beendet, wenn die Batterie leer ist. Beim Flächenflugzeug ist die Motorleistung der limitierende Parameter.
+Während die Leistung der Motoren mit gleichem Gewicht schon einen großen Einfluss auf den optimalen Steigwinkel hat, ändert sich dies bedeutend mit der Anzahl der Motoren (Vgl. Abb. \ref{abb:flaechenflzg_n_prop}). Schon mit einer Steigerung der Motorenanzahl auf 2 verändert sich der optimale Steigwinkel zu \SI{90}{^\circ}. Die dazu zugehörige Steiggeschwindigkeit liegt hierbei beim Maximum der Iterationsweite von der Steiggeschwindigkeit(siehe Abschn. \ref{eq:schub_flaechenflzg}).
+Auch hier kann die Effektivität und Effizienz einer Propelleranzahlerhöhung wieder an dem Diagramm der Restladung festgemacht werden. Je mehr Propeller verwendet werden, desto schneller sinkt die Restladung auf \SI{0}{\%}. Dies ist für alle Konfigurationen bis auf die Referenzkonfiguration der Fall, die ihre Dienstgipfelhöhe erreicht. Mit der Anzahl der Propeller sinkt auch die maximal erreichbare Höhe. Der Schub ist für alle Konfigurationen ähnlich, jedoch wird dieser bei einer Propelleranzahl von mehr als eins auf die Propeller und letztendlich auf die Motoren aufgeteilt. Damit sinkt die erforderliche Leistung pro Motor. Dies macht sich in einer Verringerung der Drehzahl bemerkbar, die in einer Verringerung des Motorstroms (siehe Gleichung \ref{eq:motorstrom}) und der Motorspannung (Vgl. Abb. \ref{eq:motorspannung}) mündet. Diese erhöhen in Summe allerdings auch den Batteriestrom (Vgl. Gleichung \ref{eq:batteriestrom}) und führen zu einem stärkeren Einbruch der Batteriespannung. Rückwirkend durch die geringe Motorspannung fällt auch die PWM äußerst niedrig aus (Vgl. Gleichung \ref{eq:pwm}), was den ESC-Wirkungsgrad \ensuremath{\eta_{PWM}} durch größere Verluste verschlechtert (Vgl. Gleichung \ref{eq:eta_pwm}). Der geringe Schub pro Propeller in Kombination mit der geringen Drehzahl vermindern den Propellerwirkungsgrad \ensuremath{\eta_{Prop}} (Vgl. Gleichung \ref{eq:eta_prop}), der zusammen mit dem ESC-Wirkungsgrad den Gesamtwirkungsgrad \ensuremath{\eta_ges} vermindert.\\
+Alle Flächenflugzeugkonfigurationen mit \ensuremath{n_{Prop}} größer eins haben gemeinsam, dass bis ca. \SI{9000}{m} Höhe ein Steigflug mit \SI{90}{^\circ} den effizientesten Steiglfug bestimmt. 
+Dies ist solange der optimale Betriebspunkt bis der Steigwinkel von \SI{55}{^\circ} ab ca. \SI{8500}{m} energieeffizienter ist. Ein vergleichbares Flugverhalten ist bei einer Erhöhung der Anzahl auf 4 zu beobachten. Dies repräsentiert das Verhalten eines VTOL-Flugzeuges, dass mit \ensuremath{\gamma = 90^\circ} vertikal startet und ab \SI{9000}{m} Höhe in die Transition auf einen Bahnneigungswinkel von \SI{55}{^\circ} übergeht. 
+Bemerkenswerter Weise sind die Kurven der Restladung von einem und zwei Propellern Deckungsgleich, obwohl alle übrigen Leistungsparameter signifikant unterschiedliche Werte aufzeigen durch die veränderte Propelleranzahl und das durch den zusätzlichen Motor erhöhte Gewicht des Flächenflugzeugs. Dies bedeutet, dass der Vorteil der Schubhalbierung und der vertikale Steigflug gerade den Nachteil des zusätzlichen Motorgewichts kompensieren. Der zweite Übergang in den vertikalen Steigflug ab \SI{16500}{m} stellt einen ineffizienten Flugzustand dar, was vor allem durch den Verlauf der Restladung und des Gesamtwirkungsgrades reflektiert wird.
+Insgesamt verringert eine Erhöhung der Motor- und Propelleranzahl um zwei den TOC um ca. \SI{7500}{m}. Die optimale Propelleranzahl ist n diesem Fall zwei, weil mit dieser Anzahl die Dienstgipfelhöhe in weitere Höhen verschoben wird.
+(Der kurze Sprung bei \ensuremath{n_{Prop} = 6} wird in der Untersuchung vernachlässigt)
 
 \begin{figure}[H]
 \centering
 	\includegraphics[scale=0.7]{Diagramme/Flaechenflzg_n_prop.pdf}
 	\caption{Einfluss der Propelleranzahl auf die Flugleistungen eines Flächenflugzeugs (\ensuremath{m_{Mot}} = \SI{106}{g}, Propeller = 9x7)}
-	\label{abb:flaechenflzg_mot_prop}
+	\label{abb:flaechenflzg_n_prop}
 \end{figure}
 
 
 \subsubsection{Gleitzahl}
-Mit einer Verringerung der Gleitzahl geht auch eine Verringerung der maximalen Höhe mit einher und vice versa. Eine entsprechend hohe Gleitzahl beudeuted gleichzeitig auch eine entsprechend hohe aerodynamische Güte (Vgl. \cite[S.34]{Scheiderer.2008}). Dazu sinkt der Widerstand im Vergleich zum Auftrieb, sodass für ein Flächenflugzeug mit einer höheren Gleitzahl für den gleichen Auftrieb weniger Leistung zur Kompensation des Widerstandes aufgebracht werden muss. Als Konsequenz dessen steht mehr Leistung für das Steigen zur Verfügung. Mit der Gleitzahl steigt ebenso der optimale Steigwinkel. Als Grund dafür kann wieder die verringerte Widerstandsleistung angeführt werden. Zusätzlich sinkt die Zeit zum Überwinden einer Höhendifferenz mit steilerem Winkel. Einen Änderung der Gleitzahl hat nur einen Einfluss der auf die Restladung, die Batteriespannung und den Bahnneigungswinkel. Eine geringe Gleitzahl bedeutet einen stärkeren Einbruch der Batteriespannung, da wiederum im für den gleichen Auftrieb mehr Widerstand kompensiert werden muss. Auffällig ist noch Verbesserungszunahme der Flugleistungen mit der Gleitzahl. Diese Änderung ist im Bereich von 4 auf 10 deutich ausgeprägter als von 20 auf 50, obwohl dies mindestens einer Verdoppelung der Gleitleistung gleichkommt.
+Alle Verläufe erreichen die Dienstgipfelhöhe, die durch die maximale Propellerdrehzahl \ensuremath{\Omega_{Prop}} limitiert wird. Ohne diese limitierende Höhe könnte das Flächenflugzeug bei Extrapolation der Restladungskurve sogar mit einer Gleitzahl von 50 eine Höhe von ca. \SI{25000}{m} erreichen. 
+Mit einer Verringerung der Gleitzahl geht auch eine Verringerung der maximalen Höhe mit einher und vice versa. Eine entsprechend hohe Gleitzahl beudeutet gleichzeitig auch eine entsprechend hohe aerodynamische Güte (Vgl. \cite[S.34]{Scheiderer.2008}). Dazu sinkt der Widerstand im Vergleich zum Auftrieb, sodass für ein Flächenflugzeug mit einer höheren Gleitzahl (Vgl. Gleichung \ref{eq:gleitzahl}) für den gleichen Auftrieb weniger Leistung zur Kompensation des Widerstandes aufgebracht werden muss. Als Konsequenz dessen steht mehr Leistung für das Steigen zur Verfügung. Mit der Gleitzahl steigt ebenso der optimale Bahnneigungswinkel. Als Grund dafür kann wieder die verringerte Widerstandsleistung angeführt werden. Zusätzlich sinkt die Zeit zum Überwinden einer Höhendifferenz mit einem steileren Winkel. Einen Änderung der Gleitzahl hat nur einen Einfluss der auf die Restladung, die Batteriespannung und den Bahnneigungswinkel. Eine geringe Gleitzahl bedeutet einen stärkeren Einbruch der Batteriespannung, da wiederum im für den gleichen Auftrieb mehr Widerstand kompensiert werden muss. \\
+Auffällig ist noch die Optimierung der Flugleistungen mit der Gleitzahl. Diese macht sich im Verlauf der Restladung deutlich bemerkbar. Eine Verbesserung der Gleitleistung von \ensuremath{E = 4} auf \ensuremath{E = 6} bedeutet auf einer Höhe von \SI{15000}{m} bereits \SI{10}{\%} mehr Restladung und einen \SI{7}{^\circ} höheren Bahnneigungswinkel. Eine erneute Erhöhung der Gleitzahl auf 10 steigert die Restladung auf dieser Höhe über dem  Meereslevel nur noch um \SI{5}{\%} und eine Erhöhung des Bahnneigungswinkel \SI{5}{^\circ}. Dieser Trend der abnehmenden Flugleistungsoptimierung bei einer gleichzeitigen Verdoppelung der Gleitleistung setzt sich fort (siehe \ref{abb:getriebe}).
+Das einfache Flächenflugzeugmodell berücksichtigt nicht, dass eine Gleitzahlerhöhung auch mit einer deutlichen Erhöhung der Strukturmasse einhergeht, weil die Flugzeugzelle, die Flügelform, das Flügelprofil usw. an die neuen Bedingungen angepasst und verstärkt werden muss. Dieser Zusammenhang wird beim Vergleich der Gleitleistung eines Segelflugzeugs mit dessen Spannweite deutlich. \\
+Dementsprechend ist eine Erhöhung des Penalty-Faktors zwingend erforderlich. Unter Berücksichtigung dieser Zusammenhänge gilt es einerseits die Gleitleistung des Flächenflugzeugs für eine Verbesserung der Flugleistungen zu steigern, dies auf der anderen Seite mit der zusätzlichen Masse der Flugzeugstruktur und dem tatsächlichen Gewinn an Flugleistungen abzuwägen. Folglich kann eine Gleitzahl zwischen 6 und 10 die besten Ergebnisse erzielen.
+
 \begin{figure}[H]
 \centering
 	\includegraphics[scale=0.7]{Diagramme/Flaechenflzg_E.pdf}
@@ -160,7 +169,7 @@ Im direkten Vergleich weist das Flächenflugzeug eine größere maximale Flughö
 Wird für das Flugzeug außerdem eine Konstellation von mehr als einem Motor gewählt, neigt das Flugzeug dazu in einem \SI{90}{^\circ} Winkel zu steigen. Damit zeigt sich die optimale Flugweise in einem vertikalen Steigflug. Hierbei werden nichtsdestotrotz wieder viele Vereinfachungen getroffen und Verluste nicht berücksichtigt. Die Vorteile eines Flächenflugzeuges zeigen sich auch nur stark bei einem Penalty-Faktor nahe bei 1. Dies muss als unrealistisch angesehen werden. Besonders im Bezug auf eine hohe Gleitzahl geht diese Anforderung mit einer hohen Flügelstreckung und damit mit einem hohen Strukturgewicht einher. Somit ist es zwingend notwendig den Penalty-Faktor zu erhöhen. Letztendlich verschwindet damit der Vorteil gegenüber einem Multicopter. 
 In der Berechnung der Flächenflugzeugaerodynamik bleibt der Einfluss von Seitenwinden unberücksichtigt, da Seitenwinde nur die Strecke über Grund beeinflussen nicht aber die Flugeigenschaften im Steigflug (siehe Kap. \ref{subsubsec:schub_flaechenflzg}). Unter Berücksichtigung an das angedachte Operationsziel einer Atmosphärenmessung sind die Flugkorridore, die von der Deutschen Flugsicherung (DFS) zur Verfügung gestellt werden, begrenzt. Daher ist ein Abtrieb bei sehr hohen Seitenwinden für die Mission negativ und muss vom Fluggerät ausgeglichen werden. Dies verbraucht zusätzlich Energie zum Ausgleichen und reduziert nochmals die erreichbare Höhe. Dies geschieht beim Quadrocopter bereits durch den Ausgleich der Seitenwinde mit einer Anpassung vom Winkel \ensuremath{\alpha_{M}}, also einer Schrägstellung der Rotorebene. Ein weiteres Argument, was gegen den Einsatz von einem Flächenflugzeug spricht ist, dass eine Start und Landevorrichtung von Nöten ist. Das erfordert Platz für eine Start- und Landebahn. Dies entfällt für einen Quadrocopter aufgrund seiner Senkrechtstarterfähigkeiten. Es ist damit der Start von jeder beliebigen Stelle möglich.
 Unter Berücksichtigung all dieser Fakten überwiegen die Vorteile beim Einsatz eines Multicopters. Dies gilt vor allem in Bezug auf das noch mögliche Potential eines Multicopters.
-
+\textcolor{red}{bei allen Parameter keine masse mit berücksichtigt}
 
 %\begin{itemize}
 %	\item Ergebnisse 
